--- a/index.html
+++ b/index.html
@@ -35,75 +35,105 @@
 
     <main>
       <section class="section-1">
-        <div class="section-left">
-          <img class="section-img" src="" alt="" />
-        </div>
-        <div class="section-right">
-          <h2>Enjoyable place for all the family</h2>
-          <p>
-            Our relaxed surroundings make dining with us a great experience for
-            everyone. We can even arrange a tour of the farm before your meal.
-          </p>
+        <div class="section-1_container">
+          <div class="section-1_left">
+            <img
+              class="section-img"
+              src="./Public/IMG/homepage/enjoyable-place-desktop@2x.jpg"
+              alt=""
+            />
+          </div>
+          <div class="section-1_right">
+            <h2 class="heading-l">Enjoyable place for all the family</h2>
+            <p class="body-1">
+              Our relaxed surroundings make dining with us a great experience
+              for everyone. We can even arrange a tour of the farm before your
+              meal.
+            </p>
+          </div>
         </div>
       </section>
 
       <section class="section-2">
-        <div class="section-left">
-          <h2>The most locally sourced food</h2>
-          <p>
-            All our ingredients come directly from our farm or local fishery. So
-            you can be sure that you’re eating the freshest, most sustainable
-            food.
-          </p>
-        </div>
-        <div class="section-right">
-          <img class="section-img" src="" alt="" />
+        <div class="section-2_container">
+          <div class="section-2_left">
+            <h2 class="heading-l">The most locally sourced food</h2>
+            <p class="body-1">
+              All our ingredients come directly from our farm or local fishery.
+              So you can be sure that you’re eating the freshest, most
+              sustainable food.
+            </p>
+          </div>
+          <div class="section-2_right">
+            <img
+              class="section-img"
+              src="./Public/IMG/homepage/locally-sourced-desktop@2x.jpg"
+              alt=""
+            />
+          </div>
         </div>
       </section>
 
       <section class="section-3">
-        <div class="section-left">
-          <h3 class="heading-l">A few highlights from our menu</h3>
-          <p>
-            We cater for all dietary requirements, but here’s a glimpse at some
-            of our diner’s favourites. Our menu is revamped every season.
-          </p>
-        </div>
-        <div class="section-right">
-          <div class="menu-1">
-            <div class="menu-img">
-              <img src="" alt="" />
-            </div>
-            <div class="menu-copy">
-              <h4>Seared Salmon Fillet</h4>
-              <p>
-                Our locally sourced salmon served with a refreshing buckwheat
-                summer salad.
-              </p>
-            </div>
+        <div class="section-3_container">
+          <div class="section-3_left">
+            <h3 class="heading-l">A few highlights from our menu</h3>
+            <p class="body-1">
+              We cater for all dietary requirements, but here’s a glimpse at
+              some of our diner’s favourites. Our menu is revamped every season.
+            </p>
           </div>
-          <div class="menu-2">
-            <div class="menu-img">
-              <img src="" alt="" />
+          <div class="section-3_right">
+            <div class="menu menu-1">
+              <div class="menu-left">
+                <img
+                  class="menu-img"
+                  src="./Public/IMG/homepage/salmon-desktop-tablet@2x.jpg"
+                  alt=""
+                />
+              </div>
+
+              <div class="menu-copy">
+                <h4>Seared Salmon Fillet</h4>
+                <p>
+                  Our locally sourced salmon served with a refreshing buckwheat
+                  summer salad.
+                </p>
+              </div>
             </div>
-            <div class="menu-copy">
-              <h4>Rosemary Filet Mignon</h4>
-              <p>
-                Our prime beef served to your taste with a delicious choice of
-                seasonal sides.
-              </p>
+            <div class="menu menu-2">
+              <div class="menu-left">
+                <img
+                  class="menu-img"
+                  src="./Public/IMG/homepage/beef-desktop-tablet@2x.jpg"
+                  alt=""
+                />
+              </div>
+
+              <div class="menu-copy">
+                <h4>Rosemary Filet Mignon</h4>
+                <p>
+                  Our prime beef served to your taste with a delicious choice of
+                  seasonal sides.
+                </p>
+              </div>
             </div>
-          </div>
-          <div class="menu-3">
-            <div class="menu-img">
-              <img src="" alt="" />
-            </div>
-            <div class="menu-copy">
-              <h4>Summer Fruit Chocolate Mousse</h4>
-              <p>
-                Creamy mousse combined with summer fruits and dark chocolate
-                shavings.
-              </p>
+            <div class="menu menu-3">
+              <div class="menu-left">
+                <img
+                  class="menu-img"
+                  src="./Public/IMG/homepage/chocolate-desktop-tablet@2x.jpg"
+                  alt=""
+                />
+              </div>
+
+              <div class="menu-copy">
+                <h4>Summer Fruit Chocolate Mousse</h4>
+                <p>
+                  Creamy mousse combined with summer fruits and dark chocolate
+                  shavings.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -191,23 +221,13 @@
 
     <footer>
       <div class="footer-ready">
-        <h1>Ready to make a reservation?</h1>
+        <div class="ready-container">
+          <h2 class="heading-l">Ready to make a reservation?</h2>
 
-        <button class="btn btn-outline">Book a table</button>
-      </div>
-      <div class="footer-nav">
-        <img src="" alt="" />
-        <div class="footer-address">
-          Marthwaite, Sedbergh<br />
-          Cumbria<br />
-          +00 44 123 4567
-        </div>
-        <div class="footer-opening">
-          Open Times<br />
-          Mon - Fri: 09:00 AM - 10:00 PM<br />
-          Sat - Sun: 09:00 AM - 11:30 PM
+          <button class="btn btn-outline">Book a table</button>
         </div>
       </div>
+      <div class="footer-nav"></div>
     </footer>
   </body>
 </html>
